# ggcmi-weather-c

./: .gitignore  CMakeLists.txt  Dockerfile  README.adoc  README.md  calendar.c  calendar.h  config.c  config.json  hyperslab.c  main.c  unit_util.c
app/: CMakeLists.txt  main.c
lib/: CMakeLists.txt  calendar.c  calendar.h  config.c  config.h  hyperslab.c  hyperslab.h  io.c  io.h  location.c  location.h  unit_util.c  unit_util.h
samples/: extent-sample.json  global-sample.json  point-sample.json
tests/: CMakeLists.txt  calendar-test.cpp  calendar-test.h  config-test.cpp  hyperslab-test.cpp  hyperslab-test.h  location-test.cpp  location-test.h
